--- a/_layouts/legal.html
+++ b/_layouts/legal.html
@@ -7,7 +7,7 @@
 	{% include head.html %}
 	<body class="layout-{{ page.layout }}">
 		{% include header.html %}
-		<div class="container-sm">
+		<div class="container-sm py-5">
             {{ content }}
         </div>
 		{% include footer.html %}
