--- a/_layouts/legal.html
+++ b/_layouts/legal.html
@@ -7,9 +7,9 @@
 	{% include head.html %}
 	<body class="layout-{{ page.layout }}">
 		{% include header.html %}
-		<div class="container text-center py-5">
-            <div class="row text-center">
-                <div class="col-12 col-md-6 co">{{ content }}</div>
+		<div class="container py-5">
+            <div class="row justify-content-center">
+                <div class="col-12 col-md-6">{{ content }}</div>
             </div>
         </div>
 		{% include footer.html %}
